--- a/resources/style.css
+++ b/resources/style.css
@@ -8,13 +8,18 @@ html {
 }
 
 .tagline{
-  background-image: resources/images/the-flatiron-building.png
+  background-image: url('https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.jpg');
+color: white;
+}
+
+.header {
+  background-image: url('https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.jpg');
 }
 
 h1 {
   font-size: 70px;
   font-weight: bold;
-  color: white;
+  color: white
 }
 
 h2  {
@@ -29,4 +34,10 @@ h3 {
 
 p {
   font-size: 14px;
+}
+
+.footer {
+  background-color: dimgray;
+  font-size: 11px;
+  color: white;
 }
